--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+[VERSION 1.2]
+- `_listandPrompt` now has bound detection.
+- Entries are automatically listed inside index.html
+
+[VERSION 1.1]
+- Bug fixes
+
 [VERSION 1.0]
 
 - The initialization mechanism has been modified.
