--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 [VERSION 1.3]
-- The hyperlinks generated for $websiteindexfile now differ from those generated for the $blogindexfile.
-- index file links now differ from those generated for the blog index
+- Hyperlinks generated for $websiteindexfile now differ from those generated for $blogindexfile. 
+  (index file links now differ from those generated for the blog index)
 - The <link> tag is now being implemented in the rss.xml file
 
 [VERSION 1.2]
