--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
+[VERSION 2.0]
+- Fixed `./blog-handler -r` not displaying text when the <p> tag was present before a <small> tag.
+- Directories inside the blog directory have been deprecated.
+- Added support for two css stylesheets/themes.
+- Bootstrap support added as the default html wrapper.
+- Website template has been boostrapped.
+
 [VERSION 1.3]
-- Hyperlinks generated for $websiteindexfile now differ from those generated for $blogindexfile. 
+- Hyperlinks generated for $websiteindexfile now differ from those generated for $blogindexfile.
   (index file links now differ from those generated for the blog index)
 - The <link> tag is now being implemented in the rss.xml file
 
